// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidingCarousel renders correctly 1`] = `
<section
  className="myClass"
>
  <div
    className=""
  />
</section>
`;

exports[`SlidingCarousel renders correctly with infinite set 1`] = `
<section
  className="myClass"
>
  <div
    className=""
  >
    <div>
      What sort of 'eater' are you?
    </div>
    <div>
      What sort of 'eater' are you?
    </div>
    <div>
      What sort of 'eater' are you?
    </div>
  </div>
</section>
`;
